css/styles.css
ul.columns {
  width:900px;
  float: right;
}
.gorilla{
  border: 2px solid gold;
  padding:4px;
  margin: 12px;
  color: red;
}
.gorilla h3{
  border: 2px solid gold;
  padding:4px;
  margin: 12px;
  color: blue;
  }

.bobcat {
  border: 2px solid green;
  padding: 6px;
  margin: 6px;
}

.bobcat p{
  color: orange;

}

.bobcat h3{
  color:green;
}

.blue-dragon{
  border: 10px solid black;
  padding: 4px;
  margin: 6px;
}

.blue-dragon h3{
  font-family: fantasy;
}

img {
  width: 100%;
  height: auto;
}

.center {
  text-align: center;
  background-color: black;
  color: white;
}

h1 {
  color: hotpink;
}

h2 {
  color: hotpink;
  font-style: italic;
}

a:link {
  color: white;
}

a:visited{
  color: white;
}

a:hover {
  color: orange;
}

a:active {
  color: hotpink;
}

@media screen and (max-width: 480px) and (min-width: 300px) {
  {
    width: 300px;
    float: left;
    padding: 20px;
  }
}

@media screen and (max-width: 1000px) and (min-width: 700px) {
  body {
    background-color: black;
    color: white;
  }
}

